--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,17 +1,77 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.entourage.app.MainActivity$PlaceholderFragment">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:textColor="@color/ent_foreground_white"
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/profile_mainPicture"
+        android:src="@drawable/ic_monkey_headphone"
+        android:background="@drawable/profile_picture_border"/>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:background="@drawable/profile_picture_border"
+            android:layout_weight=".25"
+            android:id="@+id/profile_picture1"
+            android:layout_marginRight="4dp"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:background="@drawable/profile_picture_border"
+            android:layout_weight=".25"
+            android:id="@+id/profile_picture2"
+            android:layout_marginRight="4dp"
+            android:layout_marginLeft="4dp"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:background="@drawable/profile_picture_border"
+            android:layout_weight=".25"
+            android:id="@+id/profile_picture3"
+            android:layout_marginRight="4dp"
+            android:layout_marginLeft="4dp"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:background="@drawable/profile_picture_border"
+            android:layout_weight=".25"
+            android:id="@+id/profile_picture4"
+            android:layout_marginLeft="4dp"/>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/ent_foreground_dark"
+        android:text="Large Text"
+        android:id="@+id/profile_FirstName"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/ent_foreground_dark"
+        android:text="Large Text"
+        android:id="@+id/profile_Age"/>
+</LinearLayout>
