--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -17,9 +17,9 @@
         <ImageView
             android:layout_width="@dimen/profile_image_width"
             android:layout_height="@dimen/profile_image_width"
-            android:id="@+id/profile_picture"
+            android:id="@+id/drawer_profile_picture"
             android:src="@drawable/ic_monkey_headphone"
-            android:background="@drawable/image_view_shadow_border"/>
+            android:background="@drawable/profile_picture_border"/>
     </LinearLayout>
 
     <ListView
