--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,18 +4,63 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:background="@drawable/fragment_profile_background"
     tools:context="com.entourage.app.MainActivity$PlaceholderFragment">
 
-    <ImageView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:id="@+id/profile_mainPicture"
-        android:src="@drawable/ic_monkey_headphone"
-        android:background="@drawable/profile_picture_border"/>
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:adjustViewBounds="true"
+            android:layout_gravity="center"
+            android:id="@+id/profile_mainPicture"
+            android:clickable="true"
+            android:background="@drawable/profile_picture_selector" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:paddingLeft="16dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:visibility="invisible"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="right"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_action_edit"
+                android:background="@drawable/action_button_border"
+                android:padding="6dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/ent_foreground_white"
+                android:text="Large Text"
+                android:id="@+id/profile_FirstNameAge"
+                android:textSize="18dp" />
+            <View
+                android:layout_marginTop="@dimen/separator_vertical_margin"
+                android:layout_marginBottom="@dimen/separator_vertical_margin"
+                android:background="@color/ent_separator_line_color"
+                android:layout_height="1dp"
+                android:layout_width="80dp"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -27,51 +72,80 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:background="@drawable/profile_picture_border"
+            android:background="@drawable/profile_picture_selector"
             android:layout_weight=".25"
             android:id="@+id/profile_picture1"
+            android:clickable="true"
             android:layout_marginRight="4dp"/>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:background="@drawable/profile_picture_border"
+            android:background="@drawable/profile_picture_selector"
             android:layout_weight=".25"
             android:id="@+id/profile_picture2"
+            android:clickable="true"
             android:layout_marginRight="4dp"
             android:layout_marginLeft="4dp"/>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:background="@drawable/profile_picture_border"
+            android:background="@drawable/profile_picture_selector"
             android:layout_weight=".25"
             android:id="@+id/profile_picture3"
+            android:clickable="true"
             android:layout_marginRight="4dp"
             android:layout_marginLeft="4dp"/>
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:background="@drawable/profile_picture_border"
+            android:background="@drawable/profile_picture_selector"
             android:layout_weight=".25"
             android:id="@+id/profile_picture4"
+            android:clickable="true"
             android:layout_marginLeft="4dp"/>
     </LinearLayout>
 
+    <View
+        android:layout_marginTop="@dimen/separator_vertical_margin"
+        android:layout_marginBottom="@dimen/separator_vertical_margin"
+        android:background="@color/ent_separator_line_color"
+        android:layout_height="1dp"
+        android:layout_width="80dp"
+        android:layout_gravity="center"/>
+
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/ent_foreground_dark"
-        android:text="Large Text"
-        android:id="@+id/profile_FirstName"/>
-    <TextView
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:text="@string/profile_bio_title"
+        android:layout_marginBottom="4dp"
+        android:id="@+id/textView"
+        android:textColor="@color/ent_foreground_white"
+        android:textSize="18dp" />
+
+    <EditText
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:maxLength="500"
+        android:textSize="14dp"
+        android:id="@+id/editText"
+        android:autoText="false"
+        android:hint="@string/profile_bio_placeholder"
         android:textColor="@color/ent_foreground_dark"
-        android:text="Large Text"
-        android:id="@+id/profile_Age"/>
+        android:background="@drawable/rounded_edit_text"
+        android:padding="10dp"/>
+
+    <View
+        android:layout_marginTop="@dimen/separator_vertical_margin"
+        android:layout_marginBottom="@dimen/separator_vertical_margin"
+        android:background="@color/ent_separator_line_color"
+        android:layout_height="1dp"
+        android:layout_width="80dp"
+        android:layout_gravity="center"/>
+
 </LinearLayout>
