--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="navigation_drawer_width">240dp</dimen>
 
     <dimen name="profile_image_width">80dp</dimen>
+
+    <dimen name="separator_vertical_margin">20dp</dimen>
+
 </resources>
