--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,24 +1,66 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.entourage.app.auth.LoginActivity">
+    xmlns:flatui="http://schemas.android.com/apk/res-auto"
+    tools:context="com.entourage.app.auth.LoginActivity"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_gravity="top"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:id="@+id/linearLayout2">
 
-        <com.facebook.widget.LoginButton
-            android:id="@+id/fbAuthButton"
-            android:layout_width="300dp"
+        <ImageView
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            />
+            android:adjustViewBounds="true"
+            android:id="@+id/imageViewLogo"
+            android:src="@drawable/logo_big"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="48dp"
+            android:textColor="#ff35495e"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+        android:paddingBottom="82dp"
+        android:id="@+id/linearLayout3">
+
+        <com.cengalabs.flatui.views.FlatButton
+            android:id="@+id/fb_auth_button"
+            android:layout_width="220dp"
+            android:layout_height="34dp"
+            android:text="@string/connect_with_facebook"
+            android:textSize="14dp"
+            flatui:theme="@array/deep"
+            flatui:blockButtonEffectHeight="2dp"
+            flatui:cornerRadius="4dp"
+            flatui:fontFamily="roboto"
+            flatui:fontExtension="ttf" />
+        <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:visibility="gone"/>
     </LinearLayout>
 
 
-
-</merge>
+</RelativeLayout>
