--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,17 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:flatui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.entourage.app.MainActivity$PlaceholderFragment">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:textColor="@color/ent_foreground_white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <com.cengalabs.flatui.views.FlatButton
+        android:id="@+id/logout_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/logout_from_app"
+        flatui:theme="@array/sea"
+        flatui:blockButtonEffectHeight="2dp"
+        flatui:cornerRadius="4dp"
+        flatui:fontFamily="roboto"
+        flatui:fontExtension="ttf"/>
 
-</RelativeLayout>
+</LinearLayout>
