--- a/app/src/main/res/menu/places.xml
+++ b/app/src/main/res/menu/places.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/action_delete_picture"
-        android:title="@string/action_delete"
-        android:icon="@drawable/ic_action_discard"
+    <item android:id="@+id/action_search"
+        android:title="@string/action_search"
+        android:icon="@drawable/ic_action_search"
         android:showAsAction="always"/>
 </menu>
