--- a/app/src/main/res/layout/activity_search_place.xml
+++ b/app/src/main/res/layout/activity_search_place.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="@string/album_list_empty"
+        android:text="@string/places_list_empty"
         android:visibility="gone"
         flatui:theme="@array/sea"
         flatui:fontFamily="roboto"
@@ -21,24 +21,19 @@
         flatui:fontExtension="ttf"/>
 
     <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:visibility="gone"
-        android:id="@+id/album_list">
-    </ListView>
-
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/photo_list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:numColumns="3"
-        android:scrollbarStyle="insideOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="8dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:id="@+id/placesList"
+        android:dividerHeight="8dp"
+        android:divider="@android:color/transparent"
+        android:fastScrollEnabled="false"
         android:scrollbars="none"
-        android:listSelector="@null"
-        android:visibility="gone"
-        android:horizontalSpacing="4dp"
-        android:verticalSpacing="4dp"
-        />
+        android:drawSelectorOnTop="true"
+        android:background="@color/ent_background_white_broken">
+    </ListView>
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
