--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,12 +4,13 @@
     <color name="ent_background_dark">#2D485F</color>
     <color name="ent_foreground_dark">#2D485F</color>
     <color name="ent_foreground_white">#FAFAFA</color>
-    <color name="ent_foreground_gray">#ff5f5f5f</color>
-    <color name="ent_background_white">#FAFAFA</color>
+    <color name="ent_foreground_gray">#ff6c6c6c</color>
+    <color name="ent_background_white">#FFFFFF</color>
     <color name="ent_background_milk">#b4faf8d5</color>
     <color name="ent_background_gray">#ff909090</color>
     <color name="ent_background_gray_light">#ffC0C0C0</color>
     <color name="ent_foreground_gray_light">#FFD0D0D0</color>
+    <color name="ent_background_white_broken">#EEEEEE</color>
     <color name="ent_separator_line_color">#FFD0D0D0</color>
     <color name="ent_foreground_blue">#ff43c0ff</color>
     <color name="ent_background_blue">#6f43c0ff</color>
